# ucpp

./: CMakeLists.txt  README.md  ucpp-config.cmake.in
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
include/ucpp/: codecvt_win32.hpp  countof.hpp  endian.hpp  finally.hpp  format.hpp  secstr.hpp  spin_lock.hpp  strings.hpp  synchronized.hpp  tuple_foreach.hpp
tests/: ucpp_test_codecvt_win32.cpp  ucpp_test_countof.cpp  ucpp_test_endian.cpp  ucpp_test_finally.cpp  ucpp_test_format.cpp  ucpp_test_secstr.cpp  ucpp_test_spin_lock.cpp  ucpp_test_strings.cpp  ucpp_test_synchronized.cpp  ucpp_test_tuple_foreach.cpp
